<resources>
    <string name="app_name">Quizz</string>

    <!-- Login   -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_up_failed">Something went wrong, Try again Later</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="prompt_sign_up"><u>New user? Sign up Here!</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_button">Continue</string>
    <string name="sign_out">Sign Out</string>

    <!-- Start Game   -->
    <string name="start">Start Quiz</string>
    <string name="placeholder">Text View</string>
    <string name="time">Time</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="placeholder_0">0</string>
    <string name="finish">Finish</string>
    <string name="next">Next Question</string>

</resources>