<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizzActivity">

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="@string/time"
        android:textColor="@color/app_primary_text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTimeCounter"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTimeCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder_0"
        android:textColor="@color/app_primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/correct_answer"
        android:textColor="@color/app_primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewTimeCounter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCorrectAnswerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder_0"
        android:textColor="@color/app_primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewCorrectAnswer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWrongAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:text="@string/wrong_answer"
        android:textColor="@color/app_primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewCorrectAnswerCount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWrongAnswerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder_0"
        android:textColor="@color/app_primary_text"
        app:layout_constraintStart_toEndOf="@+id/textViewWrongAnswer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="31dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/app_primary_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewA"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/app_primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

    <TextView
        android:id="@+id/textViewB"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/app_primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewA" />

    <TextView
        android:id="@+id/textViewC"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="56dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/app_primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewB" />

    <TextView
        android:id="@+id/textViewD"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="56dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/app_primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewC" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="43dp"
        android:text="@string/finish"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewD" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="43dp"
        android:text="@string/next"
        app:layout_constraintStart_toEndOf="@+id/buttonFinish"
        app:layout_constraintTop_toBottomOf="@+id/textViewD" />

</androidx.constraintlayout.widget.ConstraintLayout>